--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
+
 <body>
     <nav id="desktop-nav">
         <div class="logo">Shubham Kumar</div>
@@ -49,18 +51,18 @@
             <h1 class="title">Shubham Kumar</h1>
             <p class="section__text__p2">Software Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-1" onclick="window.open('./assets/ShubhamKumar_TechnicalResume2023.pdf')">
-                Download CV
+                <button class="btn btn-color-1" onclick="window.open('./assets/ShubhamKumar_TechnicalResume2024.pdf')">
+                    Download CV
                 </button>
                 <button class="btn btn-color-2" onclick="location.href='#contact'">
-                Contact Info
+                    Contact Info
                 </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/linkedin.png" alt="my linkedin"
-                class="icon" onclick="window.open('https://www.linkedin.com/in/shubham-kumar-83b39a168/' , '_blank', 'noopener, noreferrer')">
+                <img src="./assets/linkedin.png" alt="my linkedin" class="icon"
+                    onclick="window.open('https://www.linkedin.com/in/shubham-kumar-83b39a168/' , '_blank', 'noopener, noreferrer')">
                 <img src="./assets/github.png" alt="my github" class="icon"
-                onclick="window.open('https://github.com/shubham-godleon' , '_blank', 'noopener, noreferrer')">
+                    onclick="window.open('https://github.com/shubham-godleon' , '_blank', 'noopener, noreferrer')">
             </div>
         </div>
     </section>
@@ -85,7 +87,9 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Currently, a software developer at BNY Mellon. Graduated From Delhi Technological University (Formerly DCE). A striving individual who believes in meritocracy. Love System Design, Problem Solving and Public Speaking. Hobbies include sketching, writing, cooking and anime.</p>
+                    <p>Currently, a software developer at BNY Mellon. Graduated From Delhi Technological University
+                        (Formerly DCE). A striving individual who believes in meritocracy. Love System Design, Problem
+                        Solving and Public Speaking. Hobbies include sketching, writing, cooking and anime.</p>
                 </div>
             </div>
         </div>
@@ -102,8 +106,7 @@
                     <h2 class="experience-sub-title">Skills</h2>
                     <div class="article-container">
                         <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon"
-                            class="icon">
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
                             <div>
                                 <h3>HTML</h3>
                                 <p>Experienced</p>
@@ -190,39 +193,42 @@
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/project-hackkerrank.png" alt="project 1" class="project-img">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-hackkerrank.png" alt="project 1" class="project-img">
+                    </div>
+                    <div class="experience-sub-title">Godleon Hackerrank</div>
+                    <div class="btn-container">
+                        <button class="btn btn-color-1 project-btn"
+                            onclick="window.open('https://shubham-godleon.github.io/GodleoN-HackerranK/index.html' , '_blank', 'noopener, noreferrer')">Live
+                            Demo</button>
+                        <button class="btn btn-color-1 project-btn"
+                            onclick="window.open('https://github.com/shubham-godleon/GodleoN-HackerranK' , '_blank', 'noopener, noreferrer')">Github</button>
+                    </div>
                 </div>
-                <div class="experience-sub-title">Godleon Hackerrank</div>
-                <div class="btn-container">
-                    <button class="btn btn-color-1 project-btn" onclick="window.open('https://shubham-godleon.github.io/GodleoN-HackerranK/index.html' , '_blank', 'noopener, noreferrer')">Live Demo</button>
-                    <button class="btn btn-color-1 project-btn"
-                        onclick="window.open('https://github.com/shubham-godleon/GodleoN-HackerranK' , '_blank', 'noopener, noreferrer')">Github</button>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/Saathi.png" alt="project 2" class="project-img">
+                    </div>
+                    <div class="experience-sub-title">Saathi for the Autistic and Mute</div>
+                    <div class="btn-container">
+                        <button class="btn btn-color-1 project-btn"
+                            onclick="window.open('https://github.com/shubham-godleon/Saathi-for-the-Autistic-and-Mute' , '_blank', 'noopener, noreferrer')">Github</button>
+                    </div>
                 </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/Saathi.png" alt="project 2" class="project-img">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/avengersmatch.png" alt="project 3" class="project-img">
+                    </div>
+                    <div class="experience-sub-title">Avengers Match</div>
+                    <div class="btn-container">
+                        <button class="btn btn-color-1 project-btn"
+                            onclick="window.open('https://avengersmatch.netlify.app/' , '_blank', 'noopener, noreferrer')">Live
+                            Demo</button>
+                        <button class="btn btn-color-1 project-btn"
+                            onclick="window.open('https://github.com/shubham-godleon/avengersmatch' , '_blank', 'noopener, noreferrer')">Github</button>
+                    </div>
                 </div>
-                <div class="experience-sub-title">Saathi for the Autistic and Mute</div>
-                <div class="btn-container">
-                    <button class="btn btn-color-1 project-btn"
-                        onclick="window.open('https://github.com/shubham-godleon/Saathi-for-the-Autistic-and-Mute' , '_blank', 'noopener, noreferrer')">Github</button>
-                </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img src="./assets/avengersmatch.png" alt="project 3" class="project-img">
-                </div>
-                <div class="experience-sub-title">Avengers Match</div>
-                <div class="btn-container">
-                    <button class="btn btn-color-1 project-btn"
-                        onclick="window.open('https://avengersmatch.netlify.app/' , '_blank', 'noopener, noreferrer')">Live Demo</button>
-                    <button class="btn btn-color-1 project-btn"
-                        onclick="window.open('https://github.com/shubham-godleon/avengersmatch' , '_blank', 'noopener, noreferrer')">Github</button>
-                </div>
-            </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#positions'">
@@ -243,7 +249,7 @@
                     <div class="article-container">
                         <img src="./assets/invictus.png" alt="president" class="position-img invictus">
                     </div>
-                    <div class="experience-sub-title">Technical Council DTU </div> 
+                    <div class="experience-sub-title">Technical Council DTU </div>
                     <h2>President</h2>
                 </div>
                 <div class="details-container color-container">
@@ -263,15 +269,18 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/insta.png" alt="insta icon" class="icon contact-icon insta-icon">
-                <p><a href="https://www.instagram.com/go.d.leon/"  target="_blank" rel="noopener noreferrer">Instagram</a></p>
+                <p><a href="https://www.instagram.com/go.d.leon/" target="_blank"
+                        rel="noopener noreferrer">Instagram</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon">
-                <p><a href="mailto:shubhamkumar190699@gmail.com" target="_blank" rel="noopener noreferrer">shubhamkumar190699@gmail.com</a></p>
+                <p><a href="mailto:shubhamkumar190699@gmail.com" target="_blank"
+                        rel="noopener noreferrer">shubhamkumar190699@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/shubham-kumar-83b39a168/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
+                <p><a href="https://www.linkedin.com/in/shubham-kumar-83b39a168/" target="_blank"
+                        rel="noopener noreferrer">Linkedin</a></p>
             </div>
         </div>
     </section>
@@ -291,4 +300,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
