--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#positions">PORs</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./blog.html">Blog</a></li>
             </ul>
         </div>
     </nav>
@@ -35,6 +36,7 @@
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#positions" onclick="toggleMenu()">PORs</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                <li><a href="./blog.html" onclick="toggleMenu()">Blog</a></li>
             </div>
         </div>
     </nav>
@@ -282,10 +284,14 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#positions">PORs</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                 </ul>
             </div>
         </nav>
         <p>Copyright &#169; 2024 GodleoN. All Rights Reserved.</p>
+        <div class="counter">Hello Visitor &nbsp;<a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=10818756&style=0006&nbdigits=5&type=page&initCount=0"
+                title="Counter Widget" alt="Visit counter For Websites" class="counter-img"/></a>.</div>
     </footer>
     <script src="script.js"></script>
 </body>
