--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
         </nav>
         <p>Copyright &#169; 2024 GodleoN. All Rights Reserved.</p>
         <div class="counter">Hello Visitor &nbsp;<a href="https://www.hitwebcounter.com" target="_blank">
-            <img src="https://hitwebcounter.com/counter/counter.php?page=10818756&style=0006&nbdigits=5&type=page&initCount=0"
-                title="Counter Widget" alt="Visit counter For Websites" class="counter-img"/></a>.</div>
+            <img src="https://hitwebcounter.com/counter/counter.php?page=10819906&style=0006&nbdigits=5&type=ip&initCount=0"
+                title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>.</div>
     </footer>
     <script src="script.js"></script>
 </body>
