hamburger menu overflow scroll fix

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <div><center>Blog incoming soon!</center></div>
+    <div><center><h1>Blog incoming soon!</h1></center></div>
     <footer>
         <nav>
             <div class="nav-links-container">
