--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
                         onclick="window.open('https://github.com/shubham-godleon/avengersmatch' , '_blank', 'noopener, noreferrer')">Github</button>
                 </div>
             </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./assets/asciiArt.png" alt="project 4" class="project-img">
+                </div>
+                <div class="experience-sub-title">ASCII Art Generator</div>
+                <div class="btn-container">
+                    <button class="btn btn-color-1 project-btn"
+                        onclick="window.open('https://generateasciiart.netlify.app/' , '_blank', 'noopener, noreferrer')">Live
+                        Demo</button>
+                    <button class="btn btn-color-1 project-btn"
+                        onclick="window.open('https://github.com/shubham-godleon/Ascii-Image-Generator' , '_blank', 'noopener, noreferrer')">Github</button>
+                </div>
+            </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#positions'">
