--- a/index.html
+++ b/index.html
@@ -205,8 +205,10 @@
                 <div class="article-container">
                     <img src="./assets/Saathi.png" alt="project 2" class="project-img">
                 </div>
-                <div class="experience-sub-title">Saathi for the Autistic and Mute</div>
+                <div class="experience-sub-title">Saathi for the Mute</div>
                 <div class="btn-container">
+                    <button class="btn btn-color-1 project-btn"
+                        onclick="window.open('https://github.com/shubham-godleon/Saathi-for-the-Autistic-and-Mute' , '_blank', 'noopener, noreferrer')">Live Demo</button>
                     <button class="btn btn-color-1 project-btn"
                         onclick="window.open('https://github.com/shubham-godleon/Saathi-for-the-Autistic-and-Mute' , '_blank', 'noopener, noreferrer')">Github</button>
                 </div>
