--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My</p>
-        <h1 class="title">Projects</h1>
+        <h1 class="title">Latest Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-            <div class="details-container color-container">
+            <!-- <div class="details-container color-container">
                 <div class="article-container">
                     <img src="./assets/project-hackkerrank.png" alt="project 1" class="project-img">
                 </div>
@@ -200,7 +200,7 @@
                     <button class="btn btn-color-1 project-btn"
                         onclick="window.open('https://github.com/shubham-godleon/GodleoN-HackerranK' , '_blank', 'noopener, noreferrer')">Github</button>
                 </div>
-            </div>
+            </div> -->
             <div class="details-container color-container">
                 <div class="article-container">
                     <img src="./assets/Saathi.png" alt="project 2" class="project-img">
