--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#positions">PORs</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="./blog.html">Blog</a></li>
+          <li>
+            <a href="https://godleon.hashnode.dev/" target="_blank">Blog</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -36,7 +38,14 @@
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#positions" onclick="toggleMenu()">PORs</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-          <li><a href="./blog.html" onclick="toggleMenu()">Blog</a></li>
+          <li>
+            <a
+              href="https://godleon.hashnode.dev/"
+              target="_blank"
+              onclick="toggleMenu()"
+              >Blog</a
+            >
+          </li>
         </div>
       </div>
     </nav>
@@ -96,7 +105,7 @@
               />
               <h3>Experience</h3>
               <p>
-                2+ years <br />
+                3+ years <br />
                 Software Development
               </p>
             </div>
@@ -115,7 +124,7 @@
           </div>
           <div class="text-container">
             <p>
-              Currently, a Full Stack Engineer II at BNY. Graduated From Delhi
+              Currently, a Senior Backend Engineer at JISR. Graduated From Delhi
               Technological University (Formerly DCE). A striving individual who
               believes in meritocracy. Love System Design, Problem Solving and
               Public Speaking. Hobbies include sketching, writing, cooking and
@@ -229,6 +238,66 @@
                   <h3>SpringBoot</h3>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Ruby on Rails</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>AWS</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Redis</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Postgres</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Datadog</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Splunk</h3>
+                </div>
+              </article>
             </div>
           </div>
         </div>
@@ -239,13 +308,23 @@
         <div class="about-containers">
           <div class="details-container">
             <img
+              src="./assets/jisr-logo.jpeg"
+              alt="jisr logo"
+              class="company-logo"
+            />
+            <h2 class="experience-sub-title">JISR</h2>
+            <h3>Senior Backend Engineer</h3>
+            <p>Oct 2025 - Present</p>
+          </div>
+          <div class="details-container">
+            <img
               src="./assets/bny-mellon-logo.png"
               alt="bny logo"
               class="company-logo"
             />
             <h2 class="experience-sub-title">BNY</h2>
             <h3>Software Development Engineer</h3>
-            <p>July 2022 - Present</p>
+            <p>July 2022 - June 2025</p>
           </div>
           <div class="details-container">
             <img
@@ -470,11 +549,13 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#positions">PORs</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="./blog.html">Blog</a></li>
+            <li>
+              <a href="https://godleon.hashnode.dev/" target="_blank">Blog</a>
+            </li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 GodleoN. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 GodleoN. All Rights Reserved.</p>
       <div class="counter">
         Hello Visitor &nbsp;<a
           href="https://www.hitwebcounter.com"
